--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11078,6 +11078,8 @@ blockquote span {
 .secnewthree .inner .fourth .box p {
   padding-bottom: 20px;
   color: #ffffff;
+  font-size: 16px;
+  font-weight: 600
 }
 
 .secnewfour {
@@ -11178,9 +11180,10 @@ blockquote span {
 }
 
 .secnewfive .second .card p {
-  font-size: 24px;
+  font-size: 26px;
   color: #ffffff;
   padding-top: 20px;
+  line-height: 30px;
 }
 
 .secnewfive .inner {
@@ -11201,11 +11204,22 @@ blockquote span {
   background-position: cover;
   background-size: 100% 100%;
   background-repeat: no-repeat;
-  /* filter: brightness(0.8); */
   z-index: -1;
   border-radius: 20px;
-  /* Places the background image behind the content */
 }
+
+.secnewfive .inner::after {
+  content: "";
+  background: url('../img/new/secnewfive-after.png') center center / auto no-repeat;
+  background-size: 80%;
+  position: absolute;
+  top: -24.5%;
+  right: 2%;
+  width: 10%;
+  height: 40%;
+  z-index: -2;
+}
+
 
 .secnewfive .btm-img {
   display: flex;
@@ -11285,10 +11299,35 @@ blockquote span {
 }
 
 .secnewseven .inner {
+  position: relative;
   background: #000000;
   padding: 60px;
   border-radius: 20px;
-  box-shadow: inset 0px 70px 100px -60px rgba(4, 51, 17, 0.8), 0px 6rem 40rem rgba(252, 224, 35, 0.8);
+  box-shadow: inset 0px 14rem 10rem -50px rgba(4, 51, 17, 0.8), 0px 6rem 40rem rgba(252, 224, 35, 0.8);
+}
+
+.secnewseven .inner::before {
+  content: "";
+  background: url('../img/new/sectwo-el2.png') center center / auto no-repeat;
+  background-size: 80%;
+  position: absolute;
+  top: -26.5%;
+  left: 2%;
+  width: 10%;
+  height: 40%;
+}
+
+
+.secnewseven .inner::after {
+  content: "";
+  background: url('../img/new/sheild-back.png') center center / auto no-repeat;
+  background-size: 100%;
+  position: absolute;
+  top: -24.5%;
+  right: -22.8%;
+  width: 44%;
+  height: 80%;
+  z-index: -2;
 }
 
 .secnewseven .inner .first h2 {
@@ -11324,6 +11363,326 @@ blockquote span {
   display: flex;
   transition-property: transform;
   box-sizing: content-box;
+}
+
+.secnewseven .fourth {
+  text-align: center;
+  padding-top: 40px;
+}
+
+.secnewseven .third ul {
+  list-style: none;
+  /* max-height: 260px; */
+  overflow-y: auto;
+  overflow-x: hidden;
+  padding: 0px 16px 0px 16px;
+}
+
+.secnewseven .third li {
+  list-style-image: url('../img/new/tick.png');
+  margin-left: 30px;
+  font-size: 20px;
+  padding: 10px 0;
+}
+
+
+.secneweight .first .heading {
+  padding-bottom: 40px;
+}
+
+.secneweight .first .heading h2 {
+  font-family: 'Sans Culottes';
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 60px;
+}
+
+.secneweight .first .heading span {
+  color: #07AB25;
+}
+
+.secneweight .first .heading {
+  padding-bottom: 20px;
+}
+
+.secneweight .second .image {
+  text-align: center;
+}
+
+.secneweight .third {
+  padding-top: 10rem;
+}
+
+.secneweight .third .box {
+  background-color: #10171E;
+  border-top: 4px solid #FCE023;
+  border-radius: 20px;
+  padding-bottom: 40px;
+  padding-left: 80px;
+  padding-right: 80px;
+  text-align: center;
+  height: 30vh;
+  position: relative;
+}
+
+.secneweight .third .box .one {
+  background-color: #FCE023;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  padding: 10px;
+}
+
+
+.secneweight .third .box .one h2 {
+  font-family: 'Raleway';
+  font-size: 32px;
+  font-weight: 800;
+  color: #000000;
+}
+
+.secneweight .third .box .two {
+  padding-top: 40px;
+  padding-bottom: 20px;
+}
+
+.secneweight .third .box .two h3 {
+  font-family: 'Raleway';
+  font-size: 30px;
+  font-weight: 800;
+}
+
+.secneweight .third .box .three p {
+  font-size: 18px;
+  color: #ffffff;
+}
+
+.secneweight .third .box .one.e1::before {
+  content: "";
+  background: url('../img/new/secneweight-e1.png') center center / auto no-repeat;
+  background-size: 100%;
+  position: absolute;
+  top: -42%;
+  left: 38%;
+  width: 26%;
+  height: 50%;
+  z-index: -1;
+}
+
+.secneweight .third .box .one.e2::before {
+  content: "";
+  background: url('../img/new/secneweight-e2.png') center center / auto no-repeat;
+  background-size: 100%;
+  position: absolute;
+  top: -42%;
+  left: 38%;
+  width: 26%;
+  height: 50%;
+  z-index: -1;
+}
+
+.secneweight .third .box .one.e3::before {
+  content: "";
+  background: url('../img/new/secneweight-e3.png') center center / auto no-repeat;
+  background-size: 100%;
+  position: absolute;
+  top: -42%;
+  left: 38%;
+  width: 26%;
+  height: 50%;
+  z-index: -1;
+}
+
+.secnewnine .inner {
+  padding: 40px 0px 0px 0px;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.secnewnine .inner::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url('../img/new/secnine-inner.png');
+  background-position: cover;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  z-index: -1;
+  border-radius: 20px;
+}
+
+.secnewnine .first {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-align: center;
+}
+
+.secnewnine .first h2 {
+  font-family: 'Sans Culottes';
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 60px;
+  line-height: 80px;
+}
+
+.secnewnine .first span {
+  color: #07AB25;
+}
+
+.secnewnine .second {
+  text-align: center;
+  padding-bottom: 30px;
+}
+
+
+.secnewnine .third h3 {
+  font-family: 'Raleway';
+  text-align: center;
+  font-size: 24px;
+  font-weight: 800;
+}
+
+.secnewnine .fourth {
+  background-color: #020B13;
+  border-radius: 20px;
+  margin: 20px 20px 0px;
+}
+
+.secnewnine .fourth .left {
+  position: relative;
+  left: -10px;
+}
+
+.secnewnine .fourth .left img {
+  border-radius: 20px;
+}
+
+.secnewnine .fourth .right {
+  padding: 30px 30px 30px 0px;
+}
+
+.secnewnine .fourth .right h4 {
+  font-family: 'Raleway';
+  font-size: 20px;
+  font-weight: 800;
+  padding-bottom: 10px;
+}
+
+.secnewnine .fourth .right p {
+  /* padding-top: 6px; */
+}
+
+.secnewnine .fourth .right .socialicons {
+  padding-top: 20px;
+}
+
+.secnewnine .fourth .right .socialicons a {
+  padding-right: 4px;
+  cursor: pointer;
+}
+
+.secnewnine .fourth .left {
+  /* padding: 40px; */
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.secnewnine .fourth .left::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url('../img/new/secnewnine-left.png');
+  background-position: cover;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  /* z-index: -1; */
+  border-radius: 20px;
+}
+
+.secnewnine .fiveth .clickbtn {
+  text-align: center;
+  padding-top: 40px
+}
+
+.secnewnine .fiveth .clickbtn {
+  text-align: center;
+  padding-top: 40px
+}
+
+.secnewnine .sixth .image img {
+  border-radius: 20px;
+}
+
+.secnewten {
+  background-color: #1B242D;
+  height: 40vh;
+  z-index: -1;
+  position: relative;
+  margin-top: -20rem;
+  box-shadow: 0 0 30rem rgba(252, 224, 35, 0.8);
+}
+
+.secnewten .image img {
+  position: relative;
+  top: 150px;
+  left: 40px;
+}
+
+.site-footer {
+  background: #081018;
+  padding: 70px 0;
+}
+
+.site-footer .second .cstm-btn.ftr {
+  text-align: center;
+  font-size: 16px;
+  border-radius: 40px;
+}
+
+.site-footer .third-btm {
+  padding-top: 20px;
+}
+
+.site-footer .third-btm h4 {
+  font-family: 'Raleway';
+  font-size: 16px;
+}
+
+.site-footer .third-btm img {
+  width: 60px;
+}
+
+.site-footer .first h2 {
+  font-family: 'Raleway';
+  font-size: 12px;
+  font-weight: 800;
+  padding-top: 20px;
+}
+
+.site-footer .first h3 {
+  font-family: 'Raleway';
+  font-size: 12px;
+  font-weight: 800;
+  padding-top: 10px;
+}
+
+
+.secnewseven .inner .cstm-btn.elem::before {
+  content: "";
+  background: url(../img/new/secsevenelem.png) center center / auto no-repeat;
+  background-size: 100%;
+  position: absolute;
+  top: -8rem;
+  right: -26rem;
+  width: 40%;
+  height: 14rem;
 }
 
 @media (min-width: 1366px) and (max-width: 1600px) {
@@ -11366,6 +11725,14 @@ blockquote span {
     padding-bottom: 20px;
   }
 
+  .secnewten .image img {
+    position: relative;
+    top: 15rem;
+    left: 40px;
+    width: 120px;
+  }
+
+
   /* .secnewtwo .inner::before {
     content: "";
     background: url('../img/new/sectwo-el1.png') center center / auto no-repeat;
@@ -11376,6 +11743,399 @@ blockquote span {
     width: 10%;
     height: 4%;
   } */
+}
+
+@media (min-width: 370px) and (max-width: 500px) {
+  .header-top-icons {
+    display: none;
+  }
+
+  .hero .offset-md-2 {
+    margin-left: auto;
+  }
+
+  .hero-cs .one {
+    font-family: 'Sans Culottes';
+    font-weight: 400;
+    color: #07AB25;
+    font-size: 30px;
+    padding-bottom: 20px;
+  }
+
+  .hero-cs .two {
+    font-family: 'Sans Culottes';
+    font-weight: 400;
+    color: #FCE023;
+    font-size: 80px;
+    padding-bottom: 20px;
+  }
+
+  .hero-cs .three {
+    font-family: 'Sans Culottes';
+    font-weight: 400;
+    color: #07AB25;
+    font-size: 22px;
+    padding-bottom: 20px;
+  }
+
+  .hero-cs-two .one p {
+    font-family: 'Raleway';
+    font-weight: 800;
+    color: #FCE023;
+    font-size: 20px;
+    line-height: 40px;
+  }
+
+  .cstm-btn {
+    font-size: 10px;
+    font-weight: 700;
+    color: #ffffff;
+    padding: 10px 30px;
+    text-transform: uppercase;
+    letter-spacing: 1.4px;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    border-radius: 30px;
+  }
+
+  .secnewtwo .inner::before {
+    content: "";
+    background: url(../img/new/sectwo-el1.png) center center / auto no-repeat;
+    background-size: 100%;
+    position: absolute;
+    top: -37%;
+    left: 0%;
+    width: 16%;
+    height: 40%;
+  }
+
+  .secnewtwo .inner .one h2 {
+    padding-bottom: 20px;
+    font-size: 21px;
+  }
+
+  .secnewtwo .inner .one h3 {
+    padding-bottom: 20px;
+    font-size: 24px;
+  }
+
+  .secnewthree .inner::before {
+    content: "";
+    background: url(../img/new/sectwo-el2.png) center center / auto no-repeat;
+    background-size: 80%;
+    position: absolute;
+    top: -6.5%;
+    right: 2%;
+    width: 24%;
+    height: 10%;
+  }
+
+  .secnewthree .inner .first .one h2 {
+    text-transform: uppercase;
+    padding-bottom: 20px;
+    font-size: 32px;
+  }
+
+  .secnewthree .inner .first .one h3 {
+    text-transform: uppercase;
+    color: #FBDF23;
+    padding-bottom: 20px;
+    font-size: 28px;
+  }
+
+  .secnewthree .inner .first .three h2 {
+    font-family: 'Raleway';
+    font-size: 28px;
+    padding-bottom: 10px;
+  }
+
+  .secnewthree .inner .first .three h3 {
+    font-family: 'Raleway';
+    font-size: 24px;
+    padding-bottom: 10px;
+  }
+
+  .secnewthree .inner .first .three h4 {
+    font-family: 'Raleway';
+    font-size: 24px;
+    padding-bottom: 10px;
+    color: #FBDF23;
+    line-height: 30px;
+  }
+
+  .secnewthree .inner .first .four {
+    border: 1px solid #FBDF23;
+    border-radius: 10px;
+    margin: 20px auto;
+    padding: 20px;
+  }
+
+  .secnewthree .inner .second .left h2 {
+    font-family: 'Raleway';
+    font-size: 24px;
+    color: #06931F;
+    text-align: center;
+    font-weight: 800;
+    padding-bottom: 20px;
+    padding-left: inherit;
+    line-height: 30px;
+  }
+
+  .secnewthree .inner .second {
+    padding-top: 30px;
+  }
+
+  .secnewthree .inner .second .left p {
+    font-family: 'Raleway';
+    font-size: 19px;
+    color: #ffffff;
+    text-align: center;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    line-height: 30px;
+    padding: inherit;
+  }
+
+  .secnewthree .inner .second .right p {
+    text-align: center;
+  }
+
+  .secnewthree .inner .third h2 {
+    text-align: center;
+    font-family: 'Sans Culottes';
+    font-size: 50px;
+    color: #ffffff;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    line-height: 60px;
+    text-transform: uppercase;
+    padding: 30px 0;
+  }
+
+  .secnewthree .inner .fourth .box {
+    background-color: #069420;
+    border-bottom: 6px solid #FBDF23;
+    border-radius: 20px;
+    height: 20vh;
+    margin: 10px auto;
+  }
+
+  .secnewthree .inner .fourth {
+    padding-bottom: 40px;
+  }
+
+  .secnewfour {
+    margin: 30px;
+  }
+
+  .secnewfour h2 {
+    margin-bottom: 60px;
+    text-align: center;
+    font-size: 28px;
+    text-transform: uppercase;
+    background-color: #1F2730;
+    padding: 30px;
+    border-radius: 20px;
+    line-height: 40px;
+  }
+
+  .swiper-wrapper {
+    height: auto !important;
+  }
+
+  .swiper-pagination {
+    bottom: -8px !important;
+  }
+
+  .secnewfive .inner::after {
+    content: "";
+    background: url(../img/new/secnewfive-after.png) center center / auto no-repeat;
+    background-size: 80%;
+    position: absolute;
+    top: -6.8%;
+    right: 2%;
+    width: 24%;
+    height: 10%;
+    z-index: -2;
+  }
+
+  .secnewfive .first h2 {
+    font-size: 30px;
+    text-align: center;
+    line-height: 40px;
+    color: #182028;
+    text-transform: uppercase;
+  }
+
+  .secnewsix .right {
+    padding-top: 60px;
+  }
+
+  .secnewsix .right h2 {
+    text-transform: uppercase;
+    font-size: 40px;
+    padding-bottom: 10px;
+  }
+
+  .right-two p {
+    font-family: 'Raleway';
+    font-size: 16px;
+    color: #ffffff;
+    padding-left: 44px;
+  }
+
+  .right-two h3 {
+    font-family: 'Raleway';
+    font-size: 20px;
+    font-weight: 800;
+    color: #FBDF23;
+    padding-top: 20px;
+    padding-bottom: 10px;
+  }
+
+  .secnewseven .inner::before {
+    content: "";
+    background: url(../img/new/sectwo-el2.png) center center / auto no-repeat;
+    background-size: 80%;
+    position: absolute;
+    top: -15%;
+    left: 2%;
+    width: 28%;
+    height: 22%;
+  }
+
+  .secnewseven .inner {
+    position: relative;
+    background: #000000;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: inset 0px 14rem 10rem -50px rgba(4, 51, 17, 0.8), 0px 6rem 40rem rgba(252, 224, 35, 0.8);
+  }
+
+  .secnewseven .inner .first h2 {
+    font-size: 30px;
+    padding-bottom: 20px;
+    text-transform: uppercase;
+  }
+
+  .secnewseven .inner .first {
+    padding-top: 40px;
+  }
+
+  .secnewseven .inner .second {
+    position: relative;
+    right: -20rem;
+    top: -9rem;
+  }
+
+  .secnewseven .inner .second img {
+    width: 80px;
+  }
+
+  .secnewseven .inner .col-md-4 {
+    display: none;
+  }
+
+  .secnewseven .fourth {
+    text-align: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  .secneweight .first .heading h2 {
+    font-family: 'Sans Culottes';
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 44px;
+  }
+
+  .secneweight .third .box {
+    background-color: #10171E;
+    border-top: 4px solid #FCE023;
+    border-radius: 20px;
+    padding-bottom: 40px;
+    padding-left: 80px;
+    padding-right: 80px;
+    text-align: center;
+    height: 30vh;
+    position: relative;
+    margin: 70px 0;
+  }
+
+  .secneweight .third {
+    padding-top: 4rem;
+  }
+
+  .secbottom100 {
+    padding-bottom: 20px;
+  }
+
+  .secnewnine .first h2 {
+    font-family: 'Sans Culottes';
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 28px;
+    line-height: 40px;
+  }
+
+  .secnewnine .third h3 {
+    font-family: 'Raleway';
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 26px;
+  }
+
+  .secnewnine .fourth .right {
+    padding: 30px;
+    text-align: center;
+  }
+
+  .secnewten {
+    display: none;
+  }
+
+  .secnewnine .sixth .image img {
+    border-radius: inherit;
+    position: relative;
+    top: 20px;
+  }
+
+  .site-footer .second .cstm-btn.ftr {
+    text-align: center;
+    font-size: 14px;
+    border-radius: 40px;
+    margin-top: 40px;
+  }
+
+  .site-footer .first {
+    text-align: center;
+  }
+
+  .secnewfive .btm-img .img3.one {
+    position: relative;
+    top: 70px;
+    right: 22px;
+  }
+
+  .secnewfive .btm-img .img3.two {
+    position: relative;
+    top: 24px;
+  }
+
+  .secnewfive .btm-img .img3.three {
+    position: relative;
+    top: 40px;
+    left: 30px;
+  }
+
+  .site-footer .third-btm {
+    text-align: center;
+  }
 }
 
 
