--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11056,11 +11056,41 @@ blockquote span {
   padding-bottom: 80px;
 }
 
+/* .secnewthree .inner .fourth .box {
+  background-color: #069420;
+  border-bottom: 6px solid #FBDF23;
+  border-radius: 20px;
+  height: 20vh;
+} */
+
+
+.secnewthree .inner .fourth {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  /* Ensures boxes wrap on smaller screens */
+}
+
 .secnewthree .inner .fourth .box {
   background-color: #069420;
   border-bottom: 6px solid #FBDF23;
   border-radius: 20px;
   height: 20vh;
+  /* Keeps consistent height */
+  display: flex;
+  /* Flexbox for inner content */
+  flex-direction: column;
+  /* Aligns content vertically */
+  justify-content: center;
+  /* Centers content vertically */
+  align-items: center;
+  /* Centers content horizontally */
+  text-align: center;
+  /* Centers text inside the box */
+  padding: 10px;
+  /* Some padding for spacing */
+  box-sizing: border-box;
+  /* Ensures padding doesn't affect box size */
 }
 
 .secnewthree .inner .fourth .box h2 {
@@ -12150,7 +12180,7 @@ thead {
 
 th,
 td {
-  padding: 12px 15px;
+  padding: 17px 16px;
   text-align: left;
 }
 
@@ -12162,6 +12192,11 @@ th {
 tbody tr {
   border-bottom: 1px solid #44475a;
 }
+
+tbody tr.lst {
+  border-bottom: none;
+}
+
 
 tbody tr:hover {
   background-color: #44475a;
@@ -12177,10 +12212,10 @@ td {
   font-size: 14px;
 }
 
-td:nth-child(5),
+/* td:nth-child(5),
 td:nth-child(6) {
   text-align: right;
-}
+} */
 
 .secnewfourfour .left .heading h2 {
   font-family: 'Raleway';
@@ -12190,6 +12225,333 @@ td:nth-child(6) {
   padding: 30px 20px 30px;
   border-radius: 20px;
   font-weight: 800;
+}
+
+
+.price-section-container {
+  background-color: #10171E;
+  border-radius: 20px;
+  border-top: 4px solid #FCE022;
+  padding: 30px;
+}
+
+.price-section-container .heading {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.price-section-container .heading h2 {
+  font-family: 'Raleway';
+  font-size: 20px;
+  margin-top: 6px;
+  margin-bottom: 20px;
+  padding: 0;
+  text-transform: capitalize;
+}
+
+.secnewfourfour .token-id {
+  font-family: 'Raleway';
+  font-size: 20px;
+  color: #ccc;
+  margin-bottom: 20px;
+}
+
+/* Main Price, Percentage Change, and Green Circle */
+.secnewfourfour .price-section {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+  justify-content: space-between;
+}
+
+.secnewfourfour .price-info {
+  display: flex;
+  align-items: center;
+}
+
+.secnewfourfour .price-value {
+  font-family: 'Sans Culottes';
+  font-size: 40px;
+  color: #f4f4f4;
+  margin-right: 10px;
+}
+
+.secnewfourfour .price-change {
+  font-family: 'Raleway';
+  font-size: 22px;
+  color: #ffcc00;
+  font-weight: 800;
+}
+
+/* Green Circle */
+.secnewfourfour .green-circle {
+  font-family: 'Raleway';
+  background-color: #00ff00;
+  color: #000;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+}
+
+/* BTC Price and Change */
+.secnewfourfour .btc-price {
+  font-size: 1rem;
+  color: #ffffff;
+  margin-bottom: 10px;
+  font-family: 'Raleway';
+}
+
+.secnewfourfour .btc-change {
+  color: #00ff00;
+}
+
+/* Progress bar container */
+.secnewfourfour .progress-bar-container {
+  margin-bottom: 10px;
+}
+
+.secnewfourfour .progress-bar {
+  width: 100%;
+  height: 4px;
+  background-color: #333;
+  border-radius: 5px;
+  position: relative;
+}
+
+.secnewfourfour .progress {
+  height: 100%;
+  background-color: #00ff00;
+  border-radius: 5px;
+}
+
+/* Range values below the progress bar */
+.secnewfourfour .range-values {
+  font-family: 'Raleway';
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5px;
+  font-size: 0.9rem;
+}
+
+.secnewfourfour .leftn,
+.secnewfourfour .centern,
+.secnewfourfour .rightn {
+  color: #fff;
+}
+
+.secnewfourfour .center {
+  text-align: center;
+  flex-grow: 1;
+}
+
+.secnewfourfour .stats {
+  font-family: 'Raleway';
+  margin-top: 10px;
+}
+
+.secnewfourfour .stat-item {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  padding-bottom: 8px;
+  border-bottom: 1px solid #94949424;
+}
+
+.secnewfourfour .ftr {
+  margin-top: 20px;
+}
+
+.secnewfourfour .legal {
+  font-weight: 400;
+  text-align: center;
+  font-size: 28px;
+  padding-top: 20px;
+}
+
+.secnewfourfour .legal span {
+  color: #ffcc00;
+}
+
+.secnewfourfour .icons {
+  text-align: center;
+  /* margin-top: 0px; */
+  font-size: 40px;
+  /* display: flex; */
+}
+
+
+/* Button to open popup (Bootstrap's btn-danger class handles the button styling) */
+.open-popup {
+  margin: 20px;
+}
+
+/* Highlighted amount ($300) */
+.popup-container .highlight {
+  color: green;
+  font-weight: bold;
+}
+
+/* Modal styles */
+.popup-container .modal-content {
+  border: 10px solid yellow;
+  border-radius: 10px;
+  position: relative;
+  padding: 20px;
+  text-align: center;
+  font-family: 'Arial', sans-serif;
+  background-color: white;
+}
+
+/* Green triangles in the corners */
+.popup-container .modal-content::before,
+.popup-container .modal-content::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-style: solid;
+}
+
+/* Top-left green triangle */
+.popup-container .modal-content::before {
+  top: 0px;
+  left: 0px;
+  border-width: 30px 30px 0 0;
+  border-color: green transparent transparent transparent;
+  z-index: 1;
+  border-radius: 4px;
+}
+
+/* Bottom-right green triangle */
+.popup-container .modal-content::after {
+  bottom: 0px;
+  right: 0px;
+  border-width: 0 0 30px 30px;
+  border-color: transparent transparent green transparent;
+  z-index: 1;
+  border-radius: 4px;
+}
+
+/* Black lines as border behind the green triangles */
+.popup-container .modal-content::before::before,
+.popup-container .modal-content::after::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-style: solid;
+}
+
+/* Black border behind the top-left green triangle */
+.popup-container .modal-content::before::before {
+  top: 0;
+  left: 0;
+  border-width: 35px 35px 0 0;
+  border-color: black transparent transparent transparent;
+  z-index: 0;
+  /* This makes the black appear behind the green */
+}
+
+/* Black border behind the bottom-right green triangle */
+.popup-container .modal-content::after::after {
+  bottom: 0;
+  right: 0;
+  border-width: 0 0 35px 35px;
+  border-color: transparent transparent black transparent;
+  z-index: 0;
+  /* This makes the black appear behind the green */
+}
+
+.popup-container .modal-header h5 {
+  font-size: 2rem;
+  color: red;
+  font-weight: bold;
+}
+
+.modal-header {
+  display: block;
+}
+
+.popup-container .modal-body p {
+  font-family: 'Sans Culottes';
+  text-transform: uppercase;
+  font-size: 24px;
+  color: black;
+  /* margin-bottom: 20px; */
+  line-height: normal;
+}
+
+.purchase-btn {
+  background-color: red;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  font-size: 1rem;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+/* Close button styling (X button is Bootstrap's close button) */
+.popup-container .btn-close {
+  color: #000000;
+  background-color: #ff0000;
+  opacity: inherit;
+  border-radius: 20px;
+  float: right;
+}
+
+.secnewfourfour .second {
+  padding-top: 10rem;
+}
+
+.secnewfourfour .second .left {
+  position: relative;
+}
+
+.secnewfourfour .second .left::before {
+  content: "";
+  background: url('../img/new/secneweight-e1.png') center center / auto no-repeat;
+  background-size: 100%;
+  position: absolute;
+  top: -24%;
+  left: 42%;
+  width: 18%;
+  height: 30%;
+  z-index: -2;
+}
+
+.secnewfourfour .second .price-section-container {
+  position: relative;
+}
+
+.secnewfourfour .second .price-section-container::before {
+  content: "";
+  background: url('../img/new/secneweight-e3.png') center center / auto no-repeat;
+  background-size: 100%;
+  position: absolute;
+  top: -22%;
+  right: 40%;
+  width: 24%;
+  height: 29%;
+  z-index: -2;
+}
+
+.price-section-container .ftr .icons span {
+  padding: 0px 10px;
+}
+
+.price-section-container .ftr .icons img {
+  height: 50px;
+}
+
+
+.secnewninenine .sixth .image img {
+  border-radius: 20px;
 }
 
 /* td:last-child {
@@ -12219,19 +12581,19 @@ td:nth-child(6) {
 
   .hero-cs .one {
     color: #07AB25;
-    font-size: 42px;
+    font-size: 38px;
     padding-bottom: 20px;
   }
 
   .hero-cs .two {
     color: #FCE023;
-    font-size: 110px;
+    font-size: 100px;
     padding-bottom: 20px;
   }
 
   .hero-cs .three {
     color: #07AB25;
-    font-size: 30px;
+    font-size: 26px;
     padding-bottom: 20px;
   }
 
@@ -12271,6 +12633,12 @@ td:nth-child(6) {
     border-bottom: 6px solid #FBDF23;
     border-radius: 20px;
     height: 22vh;
+  }
+
+  .secnewtwotop .heading h2 {
+    text-transform: uppercase;
+    font-size: 64px;
+    text-align: center;
   }
 
   /* .secnewtwo .inner::before {
@@ -12647,7 +13015,7 @@ td:nth-child(6) {
 
   .site-footer .second .cstm-btn.ftr {
     text-align: center;
-    font-size: 14px;
+    font-size: 12px;
     border-radius: 40px;
     margin-top: 40px;
   }
@@ -12675,6 +13043,198 @@ td:nth-child(6) {
 
   .site-footer .third-btm {
     text-align: center;
+  }
+
+  .sectionhome-product .one {
+    text-align: center;
+    padding-top: 40px;
+    padding-left: 0px;
+    padding-bottom: 10px;
+  }
+
+  .sectionhome-product .btns {
+    margin: auto;
+    padding-left: 0px;
+  }
+
+  .sectionhome-product .top-one {
+    margin: 10px;
+    width: auto;
+  }
+
+  .sectionhome-product .btns .cstm-btn {
+    padding: 14px 0;
+    width: 100%;
+    text-align: center;
+    margin: 14px 0px;
+    z-index: 0;
+  }
+
+  .secnewtwotop .heading h2 {
+    padding-top: 10px;
+    text-transform: uppercase;
+    font-size: 24px;
+    text-align: center;
+  }
+
+  .secnewtwotwo .inner .one h2 {
+    text-align: center;
+    padding-bottom: 10px;
+    font-size: 20px;
+    text-transform: uppercase;
+  }
+
+  .secnewtwotwo .inner::before {
+    content: "";
+    background: url(../img/new/sectwotwo-el1.png) center center / auto no-repeat;
+    background-size: 100%;
+    position: absolute;
+    bottom: 100%;
+    right: 0%;
+    width: 18%;
+    height: 100%;
+  }
+
+  .secnewthreethree .inner {
+    background: #000000;
+    padding: 20px;
+  }
+
+  .secnewthreethree .inner .first .one h2 {
+    text-transform: uppercase;
+    padding-bottom: 4px;
+    font-size: 34px;
+    padding-top: 0px;
+  }
+
+  .secnewthreethree .inner .second .heading {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .secnewthreethree .inner .second .heading h2 {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 22px;
+  }
+
+  .secnewthreethree .inner .third .heading {
+    position: relative;
+    background-color: #F9DE32;
+    padding: 20px;
+    border-radius: 20px;
+    margin-top: 8rem;
+  }
+
+  .secnewthreethree .inner .third .heading::before {
+    content: "";
+    background: url(../img/new/secsevenelem.png) center center / auto no-repeat;
+    background-size: 100%;
+    position: absolute;
+    top: -7rem;
+    left: 8.5rem;
+    width: 24%;
+    height: 8rem;
+  }
+
+  .secnewfourfour h2 {
+    text-align: center;
+    font-size: 50px;
+    text-transform: uppercase;
+    padding: 30px 0px;
+    border-radius: 20px;
+  }
+
+  .secnewthreethree .inner .third .heading h2 {
+    text-transform: uppercase;
+    text-align: center;
+    color: #000000;
+    font-size: 16px;
+  }
+
+  .secnewfourfour .second .left::before {
+    content: "";
+    background: url(../img/new/secneweight-e1.png) center center / auto no-repeat;
+    background-size: 100%;
+    position: absolute;
+    top: -15%;
+    left: 38%;
+    width: 30%;
+    height: 16%;
+    z-index: -2;
+  }
+
+  .secnewfourfour .second .price-section-container {
+    position: relative;
+    margin-top: 8rem;
+  }
+
+  .secnewfivefive .inner-two {
+    padding: 24px;
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+
+  .secnewfivefive .inner-one .heading h2 {
+    font-size: 32px;
+    text-align: center;
+    color: #ffffff;
+    text-transform: uppercase;
+    padding-bottom: 50px;
+  }
+
+  .secnewfivefive .inner-two .heading h2 {
+    font-size: 16px;
+    text-align: center;
+    color: #182028;
+    text-transform: uppercase;
+  }
+
+  /* .section-top-bottom {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  } */
+
+  .secnewninenine .first h2 {
+    font-family: 'Sans Culottes';
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 30px;
+    line-height: normal;
+  }
+
+  .secnewninenine .second {
+    background-color: #0D1925;
+    margin: auto 20px;
+    padding: 40px 10px;
+    border-radius: 20px;
+  }
+
+
+  .secnewninenine .fiveth .one h2 {
+    text-transform: uppercase;
+    font-size: 30px;
+    text-align: center;
+  }
+
+  .secnewninenine .fiveth .two h2 {
+    text-transform: uppercase;
+    background-color: #069420;
+    border-radius: 20px;
+    margin: 30px;
+    padding: 28px;
+    text-align: center;
+    font-size: 16px;
+    border: 1px solid #FBDF23;
+  }
+
+  .sm-pt-60 {
+    padding-top: 60px;
+  }
+
+  .sm-pb-20 {
+    padding-bottom: 20px;
   }
 }
 
